Bug 459500 - System Settings crushes - firewall - View Connections
Summary: System Settings crushes - firewall - View Connections
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_firewall (other bugs)
Version First Reported In: 5.25.5
Platform: Kubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2022-09-21 21:22 UTC by Eugen Mjasiscev
Modified: 2022-09-22 12:06 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eugen Mjasiscev 2022-09-21 21:22:22 UTC
Application: systemsettings (5.25.5)

Qt Version: 5.15.4
Frameworks Version: 5.98.0
Operating System: Linux 5.19.0-15-generic x86_64
Windowing System: X11
Distribution: Ubuntu Kinetic Kudu (development branch)
DrKonqi: 5.25.5 [KCrashBackend]

-- Information about the crash:
Hello,

every time when I click on the button "View Connections" in System Settings in the section Firewall.

The crash can be reproduced every time.

-- Backtrace:
Application: System Settings (systemsettings), signal: Segmentation fault

[KCrash Handler]
#4  0x00007f1251839a04 in NetworkManager::WirelessDevice::activeAccessPoint() const () at /lib/x86_64-linux-gnu/libKF5NetworkManagerQt.so.6
#5  0x00007f125183b204 in  () at /lib/x86_64-linux-gnu/libKF5NetworkManagerQt.so.6
#6  0x00007f126b9a047c in  () at /lib/x86_64-linux-gnu/libQt5Core.so.5
#7  0x00007f12517f3522 in NetworkManager::AccessPoint::signalStrengthChanged(int) () at /lib/x86_64-linux-gnu/libKF5NetworkManagerQt.so.6
#8  0x00007f125181972a in  () at /lib/x86_64-linux-gnu/libKF5NetworkManagerQt.so.6
#9  0x00007f12517f73d3 in  () at /lib/x86_64-linux-gnu/libKF5NetworkManagerQt.so.6
#10 0x00007f126ab5723b in  () at /lib/x86_64-linux-gnu/libQt5DBus.so.5
#11 0x00007f126b9949d0 in QObject::event(QEvent*) () at /lib/x86_64-linux-gnu/libQt5Core.so.5
#12 0x00007f126c577f42 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#13 0x00007f126b967d78 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /lib/x86_64-linux-gnu/libQt5Core.so.5
#14 0x00007f126b96adf1 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () at /lib/x86_64-linux-gnu/libQt5Core.so.5
#15 0x00007f126b9c2187 in  () at /lib/x86_64-linux-gnu/libQt5Core.so.5
#16 0x00007f1269fcc4e9 in g_main_context_dispatch () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#17 0x00007f126a021098 in  () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#18 0x00007f1269fc9ca0 in g_main_context_iteration () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#19 0x00007f126b9c184a in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /lib/x86_64-linux-gnu/libQt5Core.so.5
#20 0x00007f126b96670b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /lib/x86_64-linux-gnu/libQt5Core.so.5
#21 0x00007f126b96eb6a in QCoreApplication::exec() () at /lib/x86_64-linux-gnu/libQt5Core.so.5
#22 0x000055f54c59e0b3 in  ()
#23 0x00007f126b29f550 in __libc_start_call_main (main=main@entry=0x55f54c59d610, argc=argc@entry=1, argv=argv@entry=0x7fff98795468) at ../sysdeps/nptl/libc_start_call_main.h:58
#24 0x00007f126b29f609 in __libc_start_main_impl (main=0x55f54c59d610, argc=1, argv=0x7fff98795468, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fff98795458) at ../csu/libc-start.c:381
#25 0x000055f54c59e9f5 in  ()
[Inferior 1 (process 3351) detached]

The reporter indicates this bug may be a duplicate of or related to bug 459028.

Reported using DrKonqi
Comment 1 Bug Janitor Service 2022-09-22 11:54:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/networkmanager-qt/-/merge_requests/27
Comment 2 David Edmundson 2022-09-22 12:06:18 UTC
Git commit 7e4ada1378835b2ecca12347f467f21c1dd8facb by David Edmundson.
Committed on 22/09/2022 at 12:02.
Pushed by davidedmundson into branch 'master'.

Guard access to wirelessNetworkInterface in wirelessNetwork

WirelessNetwork is managed as a shared pointer, wirelessNetworkInterface
has a lifespan of the interface being alive.

Throughout this class access is guarded except in updateStrength, which
comes from the access point so can still be active outliving the Network
object.

M  +4    -0    src/wirelessnetwork.cpp

https://invent.kde.org/frameworks/networkmanager-qt/commit/7e4ada1378835b2ecca12347f467f21c1dd8facb